Mon Mar  3 09:50:30 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/netxml-ups:
   - fix the 'ups.serial' for devices that report this number in
     PRODUCT_INFO
   - don't inherit value from previous object if no value is set
     for the current object
   - 'battery.current' was off by a factor of 10

Sun Mar  2 13:40:02 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: Apply the change from 'ups.delay.start' to
   'ups.timer.start' to this driver as well (the first is writeable,
   while the second is a read-only countdown timer)

Sun Mar  2 13:13:23 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups:
   - change 'ups.delay.start' and 'ups.delay.shutdown' to server
     side variables that control the ondelay and offdelay for
     the 'shutdown.return' and 'shutdown.stayoff' instcmd's
   - create 'ups.timer.(start|shutdown|reboot)' that indicate the
     time before these respective timers elapse (read-only)
   - remove the test for ondelay>offdelay (the values can be
     changed at runtime too and for some devices we already know
     there may be legitimate reasons for doing so)

Sun Mar  2 12:39:48 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/netxml-ups: The ne_parse_uri() function doesn't handle
   parsing uri's that don't contain a method how to connect. It is
   mandatory to specifiy this.

Sun Mar  2 12:23:29 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libhid.c: Fix incorrect size (usage paths are of type
   HIDNode_t, not long)

Sat Mar  1 19:28:19 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/hidparser.c, drivers/hidtypes.h, drivers/libhid.h:
   - reformattedhidparsersothatitnowhasmorewhitespace (and conforms
     to the preferred coding style regarding indentation)
   - removed nObject and nReports from HIDParser_t since they were
     not used (and would overflow if more than 255 Objects or Reports
     are found anyway)